# SPDX-License-Identifier: BSD-3-Clause
# Copyright(C) 2020 Marvell International Ltd.

sources = files(
        'dwa.c',
)
headers = files(
        'rte_dwa.h',
        'rte_dwa_core.h',
        'rte_dwa_dev.h',
        'rte_dwa_port_dwa_ethernet.h',
        'rte_dwa_port_host_ethernet.h',
        'rte_dwa_profile_admin.h',
        'rte_dwa_profile_l3fwd.h',
)

deps += ['eal']
